; ModuleID = '/home/carl/AnghaBench/libgit2/tests/remote/extr_insteadof.c_test_remote_insteadof__anonymous_remote.c'
source_filename = "/home/carl/AnghaBench/libgit2/tests/remote/extr_insteadof.c_test_remote_insteadof__anonymous_remote.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@g_repo = common dso_local global i32 0, align 4
@REPO_PATH = common dso_local global i32 0, align 4
@g_remote = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [35 x i8] c"http://example.com/libgit2/libgit2\00", align 1
@.str.1 = private unnamed_addr constant [34 x i8] c"http://github.com/libgit2/libgit2\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @test_remote_insteadof__anonymous_remote() #0 {
  %1 = load i32, i32* @REPO_PATH, align 4
  %2 = call i32 @cl_fixture(i32 %1)
  %3 = call i32 @git_repository_open(i32* @g_repo, i32 %2)
  %4 = call i32 @cl_git_pass(i32 %3)
  %5 = load i32, i32* @g_repo, align 4
  %6 = call i32 @git_remote_create_anonymous(i32* @g_remote, i32 %5, i8* getelementptr inbounds ([35 x i8], [35 x i8]* @.str, i64 0, i64 0))
  %7 = call i32 @cl_git_pass(i32 %6)
  %8 = load i32, i32* @g_remote, align 4
  %9 = call i32 @git_remote_url(i32 %8)
  %10 = call i32 @cl_assert_equal_s(i32 %9, i8* getelementptr inbounds ([34 x i8], [34 x i8]* @.str.1, i64 0, i64 0))
  %11 = load i32, i32* @g_remote, align 4
  %12 = call i32 @git_remote_pushurl(i32 %11)
  %13 = call i32 @cl_assert_equal_p(i32 %12, i32* null)
  ret void
}

declare dso_local i32 @cl_git_pass(i32) #1

declare dso_local i32 @git_repository_open(i32*, i32) #1

declare dso_local i32 @cl_fixture(i32) #1

declare dso_local i32 @git_remote_create_anonymous(i32*, i32, i8*) #1

declare dso_local i32 @cl_assert_equal_s(i32, i8*) #1

declare dso_local i32 @git_remote_url(i32) #1

declare dso_local i32 @cl_assert_equal_p(i32, i32*) #1

declare dso_local i32 @git_remote_pushurl(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
